complete chapter02